2025. 1. 9. Removed pcd_io_test. [example]
2025. 1. 9. Added zeo_ph2pcd. [app]
2025. 1. 9. Modified zeo_phconv. [app]
2025. 1. 9. Abolished zeo_stl2ztk. [app]
2025. 1. 9. Added zShape3DReadFile, and modified _zShape3DImportFromZTK. [zeo_shape3d]
2025. 1. 9. Debugged _zPCDHeaderFRead to cope with cases where some keys are missing. [zeo_vec3d_pcd]
2025. 1. 9. Added zNURBS3DKnotScale and zNURBS3D1KnotScale. [zeo_nurbs]
2025. 1. 9. Defined zNURBS3D1KnotNormalize. [zeo_nurbs]
2025. 1. 9. Modified specification of zNURBS3DKnotNormalize, and redefined it as a macro. [zeo_nurbs]
2024.12.29. Renamed zeo_pointcloud to zeo_vec3d_pcd. [zeo, zeo_vec3d_pcd, example]
2024.12.28. Corrected terra_test to reflect renaming of zVec3DListValueFPrint. [example]
2024.12.28. Added ZEO_BOUNDINGBALL_RECURSIVE_DEF_METHOD, and redefined zVec2D/3DDataBoundingBallRecursive by using it. [zeo_bvxd_boundingball, zeo_bv2d_boundingball, zeo_bv3d_boundingball]
2024.12.27. Added ZEO_BOUNDINGBALL_DEF_METHOD, and redefined zVec2D/3DDataBoundingBall by using it. [zeo_bvxd_boundingball, zeo_bv2d_boundingball, zeo_bv3d_boundingball]
2024.12.27. Renamed _zBoundingDisk2DTest2, _zBoundingDisk2DTest3, _zBoundingDisk2D3, _zBoundingDisk2DDirect, _zBoundingDisk2DRecursive, and zVec2DDataBoundingDiskRecursive to _zBoundingBall2DTest2, _zBoundingBall2DTest3, _zBoundingBall2D3, _zBoundingBall2DDirect, _zBoundingBall2DRecursive, and zVec2DDataBoundingBallRecursive, respectively. [zeo_bv2d_boundingball, zeo_voronoi2d]
2024.12.27. Renamed zeo_bv2d_boundingdisk to zeo_bv2d_boundingball. [zeo_bv2d_boundingball]
2024.12.27. Renamed _zBoundingDisk2D and zVec2DDataBoundingDisk to _zBoundingDisk2DRecursive and zVec2DDataBoundingDiskRecursive, respectively. [zeo_bv2d_boundingdisk]
2024.12.27. Renamed _zBoundingDisk2DPrim to _zBoundingDisk2DDirect. [zeo_bv2d_boundingdisk]