@@ -1,3 +1,3 @@
 PROJNAME=zeo
-VERSION=1.17.13
+VERSION=1.17.14
 DEPENDENCY="zeda=1.10.1;zm=1.9.17"
