@@ -1,3 +1,10 @@
+2025. 1.10. Added _zPH3DFReadPLYRangeGrid, and modified _zPH3DFReadPLYData. [zeo_ph_ply]
+2025. 1.10. Added ZEO_PLY_ELEM_RANGE_GRID and the corresponding string in zPLYElemType and zeo_ply_elem, respectively. [zeo_ph_ply]
+2025. 1.10. Redefined _zPLYPrpFind, and modified _zPLYFReadProperty. [zeo_ph_ply]
+2025. 1.10. Added zeo_ply_prp_type_name, and modified _zPLYPrpInit to initialize prp_ref. [zeo_ph_ply]
+2025. 1.10. Abolished zeo_ply_prp, and added a member prp_ref of zPLY. [zeo_ph_ply]
+2025. 1. 9. Defined zeo_ply_elem, and modified _zPLYElementFPrint and _zPLYFReadElement. [zeo_ph_ply]
+2025. 1. 9. Renamed z_ply_prp to zeo_ply_prp. [zeo_ph_ply]
 2025. 1. 9. Removed pcd_io_test. [example]
 2025. 1. 9. Added zeo_ph2pcd. [app]
 2025. 1. 9. Modified zeo_phconv. [app]
